--- a/vue-app/src/assets/styles.css
+++ b/vue-app/src/assets/styles.css
@@ -1,5 +1,9 @@
-body {
+.navbar, #app{
+    width: 100%
+}
 
+#content {
+margin: 2rem;
 }
 
 p{
@@ -8,6 +12,10 @@ p{
 
 form {
     margin-bottom: 2rem;
+}
+
+#event-table{
+    max-width: 100%;
 }
 
 input{
@@ -22,9 +30,6 @@ label{
     padding: 0.5rem;
 }
 
-#event-table{
-max-width: 100%;
-}
 
 button {
     padding: 0.5rem;
@@ -51,11 +56,17 @@ button {
 [class*='-message'] {
     font-weight: 500;
 }
+#footer{
 
-/* CSS for bigger screens */
-@media (min-width: 640px) {
-.navbar, #app{
-    width: 100%
 }
+
+
+/* CSS for mobile */
+@media screen and (max-width: 640px)  {
+    label, input {
+        width: 100%;
+        margin-top: 0;
+    }
+
 
 }
