--- a/vue-app/src/assets/styles.css
+++ b/vue-app/src/assets/styles.css
@@ -2,6 +2,10 @@
     width: 100%
 }
 
+.navbar{
+    background-image: linear-gradient(135deg, black 30%, blueviolet);
+}
+
 #content {
 margin: 2rem;
 }
@@ -24,10 +28,17 @@ input{
     padding: 0.5rem;
     margin:0.5rem 0;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+    widht:10rem;
 }
 
 label{
     padding: 0.5rem;
+    width: 10rem;
+}
+
+#firstImage{
+    width:100%;
+    height:750px;
 }
 
 
@@ -57,7 +68,14 @@ button {
     font-weight: 500;
 }
 #footer{
-
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-image: linear-gradient(135deg, black 30%, blueviolet);
+    padding: 2rem;
+}
+#footer p{
+    color:white;
 }
 
 
@@ -66,6 +84,11 @@ button {
     label, input {
         width: 100%;
         margin-top: 0;
+    }
+
+    #firstImage{
+        width:100%;
+        height:auto;
     }
 
 
